fix: booking controller go back