@@ -18,6 +18,7 @@ import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import lombok.extern.slf4j.Slf4j;
 
 import java.math.BigDecimal;
 import java.util.Optional;
@@ -36,11 +37,12 @@ public class BookingServiceImpl implements BookingService {
     private final KosService kosService;
     private final TransactionService transactionService;
     private final BookingValidator stateValidator;
-    private static final String BOOKING_NOT_FOUND_MESSAGE = "Booking not found";
     private static final Logger log = LoggerFactory.getLogger(BookingServiceImpl.class);
 
+    @Autowired
     private PaymentBookingRepository paymentBookingRepository;
 
+    @Autowired
     private TransactionRepository transactionRepository;
     private final EventHandlerContext eventHandlerContext;
 
@@ -106,7 +108,7 @@ public class BookingServiceImpl implements BookingService {
     @Override
     public void updateBooking(Booking booking) {
         Booking existingBooking = findBookingByIdSync(booking.getBookingId())
-                .orElseThrow(() -> new EntityNotFoundException(BOOKING_NOT_FOUND_MESSAGE));
+                .orElseThrow(() -> new EntityNotFoundException("Booking not found"));
 
         // Validate state allows update
         stateValidator.validateForUpdate(existingBooking);
@@ -117,7 +119,7 @@ public class BookingServiceImpl implements BookingService {
     @Override
     public void payBooking(UUID bookingId) throws Exception {
         Booking booking = findBookingByIdSync(bookingId)
-                .orElseThrow(() -> new EntityNotFoundException(BOOKING_NOT_FOUND_MESSAGE));
+                .orElseThrow(() -> new EntityNotFoundException("Booking not found"));
 
         // Validate state transition
         stateValidator.validateForPayment(booking);
@@ -149,7 +151,7 @@ public class BookingServiceImpl implements BookingService {
     @Override
     public void approveBooking(UUID bookingId) {
         Booking booking = findBookingByIdSync(bookingId)
-                .orElseThrow(() -> new EntityNotFoundException(BOOKING_NOT_FOUND_MESSAGE));
+                .orElseThrow(() -> new EntityNotFoundException("Booking not found"));
 
         // Validate state transition
         stateValidator.validateForApproval(booking);
@@ -165,7 +167,7 @@ public class BookingServiceImpl implements BookingService {
     @Override
     public void cancelBooking(UUID bookingId) {
         Booking booking = bookingRepository.findById(bookingId)
-                .orElseThrow(() -> new EntityNotFoundException(BOOKING_NOT_FOUND_MESSAGE));
+                .orElseThrow(() -> new EntityNotFoundException("Booking not found"));
 
         // Validate state transition
         stateValidator.validateForCancellation(booking);
@@ -215,9 +217,6 @@ public class BookingServiceImpl implements BookingService {
                     log.warn("Booking {} cancelled but no payment found to refund", bookingId);
                 }
             } catch (Exception e) {
-                if (e instanceof InterruptedException) {
-                    Thread.currentThread().interrupt(); // Important!
-                }
                 log.error("Error processing refund for booking {}: {}", bookingId, e.getMessage());
                 throw new RuntimeException("Failed to process refund: " + e.getMessage(), e);
             }
@@ -236,21 +235,21 @@ public class BookingServiceImpl implements BookingService {
     @Override
     public CompletableFuture<List<Booking>> findBookingsByOwnerId(UUID ownerId) {
         return kosService.getAllKos()
-            .thenApply(kosList ->
-                kosList.stream()
-                    .filter(kos -> kos.getOwnerId().equals(ownerId))
-                    .collect(Collectors.toList())
-            )
-            .thenApply(ownerKos -> {
-                List<UUID> ownerKosIds = ownerKos.stream()
-                    .map(Kos::getId)
-                    .toList();
+                .thenApply(kosList ->
+                        kosList.stream()
+                                .filter(kos -> kos.getOwnerId().equals(ownerId))
+                                .collect(Collectors.toList())
+                )
+                .thenApply(ownerKos -> {
+                    List<UUID> ownerKosIds = ownerKos.stream()
+                            .map(Kos::getId)
+                            .toList();
 
-                // Booking repo is synchronous; if needed, make it async too.
-                return bookingRepository.findAll().stream()
-                    .filter(booking -> ownerKosIds.contains(booking.getKosId()))
-                    .collect(Collectors.toList());
-            });
+                    // Booking repo is synchronous; if needed, make it async too.
+                    return bookingRepository.findAll().stream()
+                            .filter(booking -> ownerKosIds.contains(booking.getKosId()))
+                            .collect(Collectors.toList());
+                });
     }
 
     @Override
